# configure

./: CMakeLists.txt
include/: game.h  particlesystem.h  window.h
src/: game.cpp  main.cpp  particlesystem.cpp  window.cpp
